ApacheCommons and Swagger